--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">Game2</string>
     <string name="start_game">Start Game</string>
-    <string-array name="stats_options">Monthly Expenses</string-array>
+    <string name="menu">Menu</string>
 </resources>
