--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Game2</string>
     <string name="start_game">Start Game</string>
     <string name="menu">Menu</string>
+    <string name="game_of_life">Game of Life</string>
+    <string name="money">Money</string>
+    <string name="settings">Settings</string>
 </resources>
