--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="game_of_life">Game of Life</string>
     <string name="money">Money</string>
     <string name="settings">Settings</string>
+    <string name="music">Music</string>
 </resources>
