--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="money">Money</string>
     <string name="settings">Settings</string>
     <string name="stats">Monthly Expenses</string>
+    <string name="music">Music</string>
 </resources>
