Updated settings menu with credits, added arrows to game screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="settings">Settings</string>
     <string name="stats">Monthly Expenses</string>
     <string name="music">Music</string>
+    <string name="credits">Credits</string>
+    <string name="icon_credit">Icons...material.io/icons/</string>
+    <string name="music_credit">Music...bensound.com</string>
 </resources>
