Setting menu updated and content screen updated with question box

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="credits">Credits</string>
     <string name="icon_credit">Icons...material.io/icons/</string>
     <string name="music_credit">Music...bensound.com</string>
+    <string name="decision_history">Decision History</string>
 </resources>
