--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="game_of_life">Game of Life</string>
     <string name="money">Money</string>
     <string name="settings">Settings</string>
-    <string name="stats">Monthly Expenses</string>
+    <string name="stats">Stats</string>
     <string name="music">Music</string>
     <string name="credits">Credits</string>
     <string name="icon_credit">Icons...material.io/icons/</string>
