Fixed main functionalities and UI

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="decision_history">Decision History</string>
     <string name="num_choices">Number of Choices Made</string>
     <string name="money_spent">Total Money Spent</string>
+    <string name="dollar_sign">$</string>
+    <string name="game_name">Decisions: The College Finance Game</string>
+    <string name="play_again">Play again</string>
+    <string name="end_message">Think about how the decisions you made affected your finances!</string>
 </resources>
