Updated start screen to look better and added credit for it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="_0">0</string>
     <string name="slidingmenu_j_feinstein">SlidingMenu - J. Feinstein</string>
     <string name="under_apache_license">Under Apache License</string>
+    <string name="Start_icon_credit">Start icon made by MadeByOliver</string>
+    <string name="start_icon_credit_2">from www.flaticon.com</string>
 </resources>
